# stats-distro

./: .gitignore  Procfile  README.md  app.py  application.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ThereomGrimiore/discreate_distros/: bernoulli_distro.py  binomial_distro.py  geometric_distro.py  integer_distrobution.py
static/css/: main.css
static/js/: main.js
templates/: index.html
test/: test_bernoulli_distro.py  test_integer_distrobution.py
