[project]
name = "stats-distro"
version = "0.1.0"
description = "It computes key statistical properties — mean, variance, standard deviation, and the moment-generating function (MGF) — while interactively plotting each distribution’s PMF and CDF using Chart.js."
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "plotly>=6.4.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]
